# StockTray

./: .gitignore  README.md  RELEASES.md  design-qa.md  index.html  package-lock.json  package.json  vite.config.ts
.claude/: launch.json
.github/workflows/: market-data.yml  pages.yml  release.yml
deploy/futu-opend/: Dockerfile  README.md  compose.yaml  configure-remote.ps1  configure-secrets.sh  entrypoint.sh  verify.Dockerfile  verify.py
docs/: ARCHITECTURE.md  DEVELOPMENT.md  GITHUB_DISCOVERY.md  MARKET-DEFINITION.md  RELEASE-v0.2.10.md  RELEASE-v0.2.11.md  RELEASE-v0.2.12.md  RELEASE-v0.2.13.md  RELEASE-v0.2.14.md  RELEASE-v0.2.15.md  RELEASE-v0.2.17.md  RELEASE-v0.2.19.md  RELEASE-v0.2.20.md  RELEASE-v0.2.9.md  index.html  site.css  site.js
docs/market/: stable.json
docs/market/definitions/: 2026.07-v5.json
scripts/: check-market-session.ps1  check-version-sync.ps1  generate-icon.mjs  package-release.ps1
src/: main.tsx  styles.css  tauri.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/resources/: market-universe.txt
src-tauri/src/: config.rs  futu.rs  lib.rs  main.rs  market.rs  market_definition.rs  models.rs  portfolio.rs  quotes.rs  state.rs  tray.rs  windowing.rs
src/themes/: ThemeProvider.tsx  ThemeSelector.tsx  definitions.ts  glass-effects.css  types.ts
