[package]
name = "stocktray"
version = "0.2.18"
description = "Lightweight Windows system tray stock quote app for A-share watchlists and portfolio PnL tracking."
authors = ["StockTray"]
license = "GPL-3.0-or-later"
edition = "2021"

[lib]
name = "stocktray_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
encoding_rs = "0.8"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "gzip"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-updater = "2.10.1"
tokio = { version = "1", features = ["sync", "time"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Storage_FileSystem"] }
